{
    "version": 1,
    "name": "InputActions_Scene1",
    "maps": [
        {
            "name": "Duiling",
            "id": "4853748c-5f38-44ae-9f0b-fb4d51c09edc",
            "actions": [
                {
                    "name": "Drag",
                    "type": "Value",
                    "id": "c51e16c0-621a-432f-9149-cf6864fbb44f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pinch",
                    "type": "Value",
                    "id": "869b5f15-2643-44e3-803f-a88d0a65774f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "1381946c-d2d5-42cd-bd24-89e7a7be7a29",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap(duration=0.2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b30ada51-80d3-440f-a7e6-dd752d91a02d",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e55a523-0f3f-4d8d-95de-7e8daf10942c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc265387-56db-476f-a839-ad601397b38b",
                    "path": "<Touchscreen>/Secondary2DMotion",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pinch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "6dc22dba-753d-4b0c-9acc-76972fe032c3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pinch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "dd9ec596-1592-4f82-a8c1-3e88ee35622f",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pinch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "147f8bb6-be9f-477c-8023-b9433d1cefbb",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pinch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "18da7783-c657-46fa-9cd2-113f8761999d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pinch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "93bf3b3e-88b7-467e-806e-7d6279ae16d4",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pinch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0ec81cf5-9520-45c3-9e48-46f30e20b5c6",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "cbca08f5-2c9c-49d1-8580-9351e33752a1",
                    "path": "OneModifier(overrideModifiersNeedToBePressedFirst=true,modifiersOrder=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "0f0540ea-135a-4374-8228-ad496279a9ca",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "ce103764-4ebd-4106-ab67-a9c012a0a493",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Pingjin",
            "id": "dc287243-e601-4fcf-a6d7-3d6674c9f4bc",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "Value",
                    "id": "53e9f754-0299-4414-b36c-d512e6554e67",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryTouchContact",
                    "type": "Button",
                    "id": "8cb1bf2d-a68d-4aef-be8b-64ffcb4a242b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryTouch",
                    "type": "Value",
                    "id": "c099d8d4-491a-439a-9df2-1672389b0ef3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTap",
                    "type": "Button",
                    "id": "1aa6737a-378d-4628-afa1-7ce1fa81d979",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap(duration=0.2)",
                    "initialStateCheck": false
                },
                {
                    "name": "DeviceTilt",
                    "type": "Value",
                    "id": "7dd892e7-6d0a-4d35-944c-9f014accdd5c",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "15c3695e-bc1d-45de-bdd2-fce9918f4d93",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3622a174-0f5a-40fa-9ea5-177d5021a784",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5d0b349-023a-418d-a976-667066c02369",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba22a39f-7ddb-4030-a133-f1ac7eeafc1c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a08d6313-dd56-4241-b902-1317faf69c99",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "bcac89f7-fabd-419e-b5df-b7586bc70ae1",
                    "path": "OneModifier(overrideModifiersNeedToBePressedFirst=true,modifiersOrder=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "0f8db6a5-36ba-4c82-953e-be9751b4540e",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "0d7bee92-13f9-4b5c-a2ee-af0fd50585c0",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c60081a6-fd16-4f2e-81f8-32e220be47b0",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c21e5bb-26ae-4e0d-b77c-bb03bf5b7dc7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99480fe6-8f18-4998-bcb3-b9cbeb4d00bf",
                    "path": "<Gyroscope>/angularVelocity",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeviceTilt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "3D Vector",
                    "id": "fc5e4fd0-39cd-48fc-be80-2780fb2b970a",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeviceTilt",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f2083f9b-fbca-4e83-aee8-06b60f2301b8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeviceTilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d58b91f5-2463-432a-a797-71790b2c2ef9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeviceTilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8b959d72-0a8a-4900-b543-8e8be6041c3c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeviceTilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "631b4203-75e5-41aa-b5fc-d047d8488479",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeviceTilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "ca5d0954-a35f-470a-b3c4-ba109c500705",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeviceTilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "0e768581-35fb-4357-907c-fa7c58b96894",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeviceTilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Panjin",
            "id": "958d98ec-d904-449c-a922-ce6b1f8057cc",
            "actions": [
                {
                    "name": "NeedlePosition",
                    "type": "Value",
                    "id": "03bc99bd-48b1-4bd6-8e0b-33612381b324",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TraceContact",
                    "type": "Button",
                    "id": "af06bb36-a197-4b9b-86d7-5455e96b6d24",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cc0c2966-8039-4c1a-97fb-39097b8a5b8c",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NeedlePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8cab657-4f7b-426e-8fdd-54ed7950e66f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NeedlePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd7efdd9-a719-4e46-af65-4e32f5bed440",
                    "path": "<Touchscreen>/primaryTouch/press\t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TraceContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}